package dominio.ropa;

public enum TipoMaterial {
  ALGODON, JEAN, CUERO, POLIESTER, LANA, PIQUE, ACETATO, DE_VESTIR
}
