package ropa;

public enum MaterialConstruccion {
  ALGODON, JEAN, CUERO, POLIESTER, LANA
}
